# mallet-sync

./: .gitignore  README.md  justfile  main.py  pyproject.toml  requirements.txt
old/: audio_player.py  main.py
output/20250421_151208/: session_metadata.json
output/20250421_151709/: session_metadata.json
output/20250421_151937/: session_metadata.json
output/20250421_152318/: session_metadata.json
output/20250421_152534/: session_metadata.json
output/20250421_152805/: session_metadata.json
output/20250421_153021/: session_metadata.json
play_and_record_maya_mallet/: audio_multi_player.py  pyaudio_stream_recorder.py
src/mallet_sync/: __init__.py  config.py  logger.py  logging_utils.py  main.py  utils.py
src/mallet_sync/audio/: __init__.py  core.py  sd_player.py  sd_recorder.py
src/mallet_sync/config/: __init__.py  config.py  logger.py
src/mallet_sync/utils/: audio_utils.py  device_utils.py  file_utils.py
tests/: test_device_handling.py  test_emergency_write_fixed.py  test_ensure_data_queued.py  test_multi_device_recorder.py  test_no_dropped_frames.py  test_production_integrity.py
wheels/: standard_logger-0.1.1-py3-none-any.whl
